[package]
name = "csx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anstyle = "1.0.1"
anyhow = "1.0.71"
candid = { version = "0.9.0", features = ["parser"] }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "f1a86eeebf63ee9cafc5be37b3257a665211a6c6" }
clap = { version = "4.3.0", features = ["derive", "env", "unstable-styles", "wrap_help"] }
dialoguer = "0.11.0"
dotenvy = "0.15.7"
ethabi = "18.0.0"
ic-wasm = "0.6.0"
json_typegen_shared = "0.7.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.59"
quote = "1.0.28"
regex = "1.8.4"
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
syn = "2.0.18"
walrus = "0.20.1"

[dev-dependencies]
insta = { version =  "1.33.0", features = ["yaml"] }
jsonschema = "0.17"

[features]
integration-test = []

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
