[package]
name = "csx"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
anstyle = "1.0.1"
anyhow = "1.0.71"
candid = "^0.10.4"
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "b85b4657087fe11555e9074f122a457dd760c838" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "b85b4657087fe11555e9074f122a457dd760c838" }
clap = { version = "4.3.0", features = ["derive", "env", "unstable-styles", "wrap_help"] }
dialoguer = "0.11.0"
dotenvy = "0.15.7"
ethabi = "18.0.0"
flate2 = "1.0.28"
ic-agent = "0.34.0"
ic-utils = "0.34.0"
ic-wasm = "0.7.2"
json_typegen_shared = "0.7.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.59"
quote = "1.0.28"
regex = "1.8.4"
semver = "1.0.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
syn = "2.0.18"
tar = "0.4.40"
ureq = { version = "2.9.6", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
walrus = "0.20.1"
url = "2.5.0"
dns-lookup = "2.0.4"
hex = "0.4.3"
keyring = "2.3.3"
reqwest = { version  = ">=0.11.20, < 0.11.27" }

[dev-dependencies]
insta = { version =  "1.33.0", features = ["yaml"] }
jsonschema = "0.17"

[features]
integration-test = []

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
