[workspace]
members = ["canisters/sample_snapshot_indexer_evm", "logics/sample_snapshot_indexer_evm", "canisters/sample_relayer", "logics/sample_relayer", "canisters/sample_snapshot_indexer_icp", "logics/sample_snapshot_indexer_icp", "canisters/sample_algorithm_indexer", "logics/sample_algorithm_indexer", "canisters/sample_algorithm_lens", "logics/sample_algorithm_lens", "canisters/sample_event_indexer", "logics/sample_event_indexer", "canisters/sample_snapshot_indexer_https", "logics/sample_snapshot_indexer_https", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "^0.9.6"
ic-cdk = "^0.11"
ic-cdk-macros = "^0.8"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
hex = "0.4.3"

ic-web3-rs = { git = "https://github.com/horizonx-tech/ic-web3-rs.git", tag = "v0.1.3" }
ic-solidity-bindgen = { git = "https://github.com/horizonx-tech/ic-solidity-bindgen.git", tag = "v0.1.9" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "0572e47c38ef1b957b9f089b70b5af8962b069af" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "0572e47c38ef1b957b9f089b70b5af8962b069af" }
